[gd_scene load_steps=4 format=3 uid="uid://igt0cl0wc7uu"]

[ext_resource type="Script" uid="uid://ecx11ojqb0g3" path="res://ui/components/list_item/list_item.gd" id="1_smy63"]

[sub_resource type="LabelSettings" id="LabelSettings_owr6n"]
font_size = 14

[sub_resource type="LabelSettings" id="LabelSettings_3yttf"]
font_size = 9
font_color = Color(0.752941, 0.752941, 0.752941, 1)

[node name="ListItem" type="BoxContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 17.0
grow_horizontal = 2
script = ExtResource("1_smy63")

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = -1
vertical = true

[node name="MainLabel" type="Label" parent="BoxContainer"]
layout_mode = 2
text = "Test:"
label_settings = SubResource("LabelSettings_owr6n")

[node name="SupportLabel" type="Label" parent="BoxContainer"]
layout_mode = 2
text = "Default"
label_settings = SubResource("LabelSettings_3yttf")

[node name="Button" type="Button" parent="."]
visible = false
layout_mode = 2
